2012-04-23 Tom Callaway <tcallawa@redhat.com>

	libpng 1.5 removes direct access to struct members; use accessor
	functions instead.

	* src/node/vrml97/image_stream_listener.cpp
	* src/node/vrml97/image_stream_listener.h

2012-04-23 Braden McDaniel  <braden@endoframe.com>

	NP[P]_GetMIMEDescription returns const char * in recent variations
	of NPAPI.

	* configure.ac
	* src/mozilla-plugin/openvrml.cpp

2011-08-20 Braden McDaniel  <braden@endoframe.com>

	Define BOOST_FILESYSTEM_VERSION=3 for compatibility with Boost
	1.44 and later.

	* README: Note Boost 1.44 minimum version.
	* src/Makefile.am
	(libopenvrml_libopenvrml_la_CPPFLAGS): Define
	BOOST_FILESYSTEM_VERSION=3.
	(local_libopenvrml_dl_la_CPPFLAGS): Define
	BOOST_FILESYSTEM_VERSION=3.
	(script_java_la_CPPFLAGS): Define BOOST_FILESYSTEM_VERSION=3.

2011-08-17 Braden McDaniel  <braden@endoframe.com>

	Use the Boost.Filesystem version 3 API.

	* src/Makefile.am
	(libopenvrml_libopenvrml_la_CPPFLAGS): Removed
	-DBOOST_FILESYSTEM_VERSION=2.
	(local_libopenvrml_dl_la_CPPFLAGS): Removed
	-DBOOST_FILESYSTEM_VERSION=2.
	(script_java_la_CPPFLAGS): Removed -DBOOST_FILESYSTEM_VERSION=2.
	* src/libopenvrml/openvrml/local/component.cpp
	(openvrml::local::component_registry::component_registry()): Use
	boost::filesystem::path::string.
	* src/local/libopenvrml-dl/openvrml/local/dl.cpp
	(openvrml::local::dl::prepend_to_searchpath(const
	boost::filesystem::path &)): Use boost::filesystem::path::string.

2011-04-21 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.8 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_LIBRARY_VERSION): Update to 10:0:1.  Previous change
	was incorrect.

2011-04-20 Braden McDaniel  <braden@endoframe.com>
